--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.pyc
 
-template-project/build
-template-project/Pipfile.lock
+ultraviolet-taproot/build
+ultraviolet-taproot/Pipfile.lock
 project.xml.log
 
 .vscode/.cortex-debug.peripherals.state.json
